# nexaflow-crm

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: Badge.vue  BudgetBar.vue  CommunicationTimeline.vue  ContactPicker.vue  CurrencyInput.vue  CurrencySelector.vue  Modal.vue  Navbar.vue  StatCard.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  contacts.js  dashboard.js  invoices.js  projects.js
frontend/src/utils/: currency.js
frontend/src/views/: AccountView.vue  ContactsView.vue  DashboardView.vue  InvoicesView.vue  LoginView.vue  ProjectsView.vue
scripts/: migrate.py
src/nexaflow_crm/: auth.py  currency_service.py  database.py  main.py  models.py  schemas.py
src/nexaflow_crm/routers/: auth_router.py  communication_log.py  contacts.py  currencies.py  dashboard.py  invoice_workflow.py  invoices.py  milestones.py  project_contacts.py  projects.py
src/nexaflow_crm/static/: index.html
